<resources>
    <string name="app_name">EmiBot V2.0</string>
    <string name="emibot">EmiBOT V2.0</string>
    <string name="robotica_educativa">Robotica Educativa JP</string>
    <string name="connect_btn">Conectar</string>
    <string name="disconnect_button">Desconectar</string>
    <string name="clean_btn">Limpiar</string>
    <string name="exit_btn">Exit</string>
    <string name="velocity_start">1</string>
    <string name="speed">Velocidad</string>
    <string name="username">Nombre</string>
    <string name="input_username">Ingrese su nombre de usuario</string>
    <string name="send_btn">Enviar</string>
    <string name="text">Texto</string>
</resources>
