<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/BackgroundStyle"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/emi"
                android:layout_weight="1.25"
                android:layout_marginLeft="10sp"
                android:background="@drawable/emi_logob"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.70"
            android:text="@string/emibot"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/myWhite"
            android:background="@drawable/emi_borders"
            android:layout_marginHorizontal="5sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/robotica_educativa"
            android:textColor="@color/myWhite"
            android:gravity="center"
            android:textSize="30sp"
            android:background="@drawable/robotica_educativab"
            android:layout_marginTop="7dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="4"
            android:gravity="center">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_btn"
                android:background="@drawable/emi_borders"
                android:textColor="@color/myWhite"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_marginHorizontal="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnect_button"
                android:background="@drawable/emi_borders"
                android:textColor="@color/myWhite"
                android:textSize="10sp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clean_btn"
                android:background="@drawable/emi_borders"
                android:textColor="@color/myWhite"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit_btn"
                android:background="@drawable/emi_borders"
                android:textColor="@color/myWhite"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="4"
            android:background="@drawable/blue_margins"
            android:layout_marginHorizontal="2dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textSize="16sp"
                    android:textColor="@color/blue_margin"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="10sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10sp">
                    <Button
                        android:background="@drawable/arrow_btns"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:textColor="@color/myWhite"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/velocity_start"
                        android:textSize="60sp"
                        android:gravity="center"/>
                    <Button
                        android:background="@drawable/arrow_btns"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:textColor="@color/myWhite"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
                    <TableLayout
                        android:stretchColumns="*"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="50dp">
                        <TableRow
                            android:layout_marginBottom="5dp">
                            <Button
                                android:background="@drawable/arrow_btns"
                                android:textColor="@color/myWhite"
                                android:layout_weight="1" />
                            <Button
                                android:background="@drawable/arrow_btns"
                                android:textColor="@color/myWhite"
                                android:layout_weight="1"
                                android:layout_marginHorizontal="5dp"/>
                            <Button
                                android:background="@drawable/arrow_btns"
                                android:textColor="@color/myWhite"
                                android:layout_weight="1"
                                />
                        </TableRow>
                        <TableRow
                            android:layout_marginVertical="2.5dp">
                            <Button
                                android:background="@drawable/arrow_btns"
                                android:textColor="@color/myWhite"
                                android:layout_weight="1" />
                            <Button
                                android:background="@drawable/arrow_btns"
                                android:textColor="@color/myWhite"
                                android:layout_weight="1"
                                android:layout_marginHorizontal="5dp"/>
                            <Button
                                android:background="@drawable/arrow_btns"
                                android:textColor="@color/myWhite"
                                android:layout_weight="1" />
                        </TableRow>
                        
                        <TableRow
                            android:layout_marginTop="5dp">
                            <Button
                                android:background="@drawable/arrow_btns"
                                android:textColor="@color/myWhite"
                                android:layout_weight="1" />
                            <Button

                                android:background="@drawable/arrow_btns"
                                android:textColor="@color/myWhite"
                                android:layout_weight="1"
                                android:layout_marginHorizontal="5dp"/>
                            <Button
                                android:background="@drawable/arrow_btns"
                                android:textColor="@color/myWhite"
                                android:layout_weight="1" />
                        </TableRow>

                    </TableLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_gravity="top"
                android:layout_marginLeft="8dp"
                android:textSize="18sp"
                android:textColor="@color/myWhite"
                android:background="@color/blue_margin"/>
            <EditText
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_username"
                android:textColorHint="@color/blue_margin"
                android:textSize="14sp"
                android:textColor="@color/myBlack"
                android:paddingTop="0dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <EditText
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_username"
                android:textColorHint="@color/blue_margin"
                android:textSize="14sp"
                android:textColor="@color/myBlack"
                android:paddingTop="0dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Esto es una prueba"
                android:background="@drawable/emi_borders"
                android:textColor="@color/myWhite"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_gravity="top"
                android:layout_marginLeft="8dp"
                android:textSize="18sp"
                android:textColor="@color/myWhite"
                android:background="@color/blue_margin"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/myWhite"
                android:layout_marginVertical="2.5dp"
                android:layout_marginHorizontal="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text"/>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>